--- a/games_caro/pubspec.yaml
+++ b/games_caro/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter: 
     sdk: flutter
   cross_scroll:
+  uuid:
 
 dev_dependencies: 
   flutter_lints: 2.0.1
@@ -19,4 +20,6 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets:
+    - assets/images/
 
