--- a/games_caro/pubspec.yaml
+++ b/games_caro/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core:
   firebase_storage:
   logging:
+  cached_network_image:
 
 dev_dependencies: 
   flutter_lints: 2.0.1
